# VerdaTerraAI

./: .env.example  .gitignore  ACCESSIBILITY.md  FRONTEND_GUI_ARCHITECTURE.md  LICENSE  README.md  SECURITY.md  requirements.txt
backend/agents/: smell.py  (+7 more)
database/: schema.sql  seed_data.sql  setup.py
mcp_toolbox/: database_tools.py  server.py  ulb_integration.py
scripts/: README.md  run-backend.ps1  run-backend.sh  run-frontend.ps1  run-frontend.sh
tests/: test_agents.py
verdaterra-ui/: README.md  index.html  package-lock.json  package.json
verdaterrakai/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
verdaterrakai/src/verdaterrakai/: __init__.py
verdaterrakai/src/verdaterrakai/agents/: civic_campaign_agent.py  guardrails.py  perception_agent.py  planner_agent.py  sub_agents.py  tools.py  types.py
verdaterrakai/src/verdaterrakai/analytics/: bq_export.py
verdaterrakai/src/verdaterrakai/app/: caching.py  main.py
verdaterrakai/src/verdaterrakai/config/: jurisdictions.json  jurisdictions.py  localization.py  settings.py
verdaterrakai/src/verdaterrakai/examples/: mobile_app_submit.js  ngo_dashboard_fetch.py
verdaterrakai/src/verdaterrakai/utils/: logger.py
verdaterrakai/tests/: eval_dataset.json  test_api.py  test_caching.py  test_civic_campaign.py  test_core_logic.py  test_e2e_demo.py  test_e2e_flow.py  test_hygiene_routing.py  test_localization.py  test_mcp_integration.py  test_policy_rag.py
verdaterrakai/tests/evals/: eval_runner.py  golden_set.json
verdaterrakai/tools/synthetic_data/: README.md  distributions.py  generate.py
(+18 files in other folders)
