[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verdaterrakai"
version = "0.1.0"
description = "VerdaTerraAI ADK Python Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=1.0.0",
    "google-genai>=0.4.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
dev = [
    "black",
    "isort",
    "flake8"
]
